Error "json file is not valid" during import settings - FIXED
Using value VARCHAR in post request may break custom field save - FIXED
Noindex on empty archive pages not working on page with one post - FIXED
gd_listings shortcode parameter title_tag is not working - FIXED
gd_listings shortcode new parameter view_all_link added - ADDED

v2.0.0.45
Listing without author assigned always shows author actions widget - FIXED
Video not rendering from video link - FIXED
Post preview not showing new images added - FIXED
Post preview not showing map correctly - FIXED
Force iOS style scroll bars on multiselect form inputs so they are noticeable on mobile - CHANGED
Some settings for selecting font awesome icons are not showing all icons - FIXED
Font awesome settings icons updated to 5.6.3 - UPDATED
Added missing custom notice view file - FIXED
Date range options added to date custom field - ADDED
Date of birth added as a predefined field - ADDED
delete_attachment() not deleting all image sizes - FIXED
Clear search near not clearing GPS info if on search page - FIXED
RTL style file not found - FIXED
Added warning notice if buddypress is active and hijacking search slug - ADDED
File upload input sometimes not getting correct post ID on add listing form - FIXED
Internal changes to post_badge function to enable it to be used by other addons - CHANGED
Submit listing button now shows spinner and disables button when saving - CHANGED
Compatibility changes for List Manager addon - ADDED
X theme archive titles not working - FIXED
API for posts not filtering for location params - FIXED
Tags with spaces can now be searched for in quotes ex: "Sample Tags" - ADDED

v2.0.0.44
Astra theme archive page layout compatibility - ADDED
Astra theme GD search page meta title setting not working - FIXED
Load default template if page is 404 - FIXED
GD Listings widget special offers option is missing - FIXED
Post badge external urls are now nofollow - CHANGED