@@ -2,7 +2,6 @@
 // Font Awesome v. 5
 
 function geodir_font_awesome_array() {
-
 	return array(
 		'fab fa-500px'                               => 'f26e',
 		'fab fa-accessible-icon'                     => 'f368',
@@ -93,6 +92,7 @@ function geodir_font_awesome_array() {
 		'fas fa-baby-carriage'                       => 'f77d',
 		'fas fa-backspace'                           => 'f55a',
 		'fas fa-backward'                            => 'f04a',
+		'fas fa-bacon'                               => 'f7e5',
 		'fas fa-balance-scale'                       => 'f24e',
 		'fas fa-ban'                                 => 'f05e',
 		'fas fa-band-aid'                            => 'f462',
@@ -142,6 +142,7 @@ function geodir_font_awesome_array() {
 		'fas fa-bong'                                => 'f55c',
 		'fas fa-book'                                => 'f02d',
 		'fas fa-book-dead'                           => 'f6b7',
+		'fas fa-book-medical'                        => 'f7e6',
 		'fas fa-book-open'                           => 'f518',
 		'fas fa-book-reader'                         => 'f5da',
 		'fas fa-bookmark'                            => 'f02e',
@@ -152,6 +153,7 @@ function geodir_font_awesome_array() {
 		'fas fa-boxes'                               => 'f468',
 		'fas fa-braille'                             => 'f2a1',
 		'fas fa-brain'                               => 'f5dc',
+		'fas fa-bread-slice'                         => 'f7ec',
 		'fas fa-briefcase'                           => 'f0b1',
 		'fas fa-briefcase-medical'                   => 'f469',
 		'fas fa-broadcast-tower'                     => 'f519',
@@ -241,6 +243,7 @@ function geodir_font_awesome_array() {
 		'fas fa-check-double'                        => 'f560',
 		'fas fa-check-square'                        => 'f14a',
 		'far fa-check-square'                        => 'f14a',
+		'fas fa-cheese'                              => 'f7ef',
 		'fas fa-chess'                               => 'f439',
 		'fas fa-chess-bishop'                        => 'f43a',
 		'fas fa-chess-board'                         => 'f43c',
@@ -264,6 +267,7 @@ function geodir_font_awesome_array() {
 		'far fa-circle'                              => 'f111',
 		'fas fa-circle-notch'                        => 'f1ce',
 		'fas fa-city'                                => 'f64f',
+		'fas fa-clinic-medical'                      => 'f7f2',
 		'fas fa-clipboard'                           => 'f328',
 		'far fa-clipboard'                           => 'f328',
 		'fas fa-clipboard-check'                     => 'f46c',
@@ -304,6 +308,7 @@ function geodir_font_awesome_array() {
 		'fas fa-comment-dollar'                      => 'f651',
 		'fas fa-comment-dots'                        => 'f4ad',
 		'far fa-comment-dots'                        => 'f4ad',
+		'fas fa-comment-medical'                     => 'f7f5',
 		'fas fa-comment-slash'                       => 'f4b3',
 		'fas fa-comments'                            => 'f086',
 		'far fa-comments'                            => 'f086',
@@ -348,6 +353,7 @@ function geodir_font_awesome_array() {
 		'fas fa-crosshairs'                          => 'f05b',
 		'fas fa-crow'                                => 'f520',
 		'fas fa-crown'                               => 'f521',
+		'fas fa-crutch'                              => 'f7f7',
 		'fab fa-css3'                                => 'f13c',
 		'fab fa-css3-alt'                            => 'f38b',
 		'fas fa-cube'                                => 'f1b2',
@@ -423,6 +429,7 @@ function geodir_font_awesome_array() {
 		'fab fa-edge'                                => 'f282',
 		'fas fa-edit'                                => 'f044',
 		'far fa-edit'                                => 'f044',
+		'fas fa-egg'                                 => 'f7fb',
 		'fas fa-eject'                               => 'f052',
 		'fab fa-elementor'                           => 'f430',
 		'fas fa-ellipsis-h'                          => 'f141',
@@ -652,6 +659,7 @@ function geodir_font_awesome_array() {
 		'fab fa-hacker-news'                         => 'f1d4',
 		'fab fa-hacker-news-square'                  => 'f3af',
 		'fab fa-hackerrank'                          => 'f5f7',
+		'fas fa-hamburger'                           => 'f805',
 		'fas fa-hammer'                              => 'f6e3',
 		'fas fa-hamsa'                               => 'f665',
 		'fas fa-hand-holding'                        => 'f4bd',
@@ -659,6 +667,7 @@ function geodir_font_awesome_array() {
 		'fas fa-hand-holding-usd'                    => 'f4c0',
 		'fas fa-hand-lizard'                         => 'f258',
 		'far fa-hand-lizard'                         => 'f258',
+		'fas fa-hand-middle-finger'                  => 'f806',
 		'fas fa-hand-paper'                          => 'f256',
 		'far fa-hand-paper'                          => 'f256',
 		'fas fa-hand-peace'                          => 'f25b',
@@ -684,6 +693,7 @@ function geodir_font_awesome_array() {
 		'fas fa-handshake'                           => 'f2b5',
 		'far fa-handshake'                           => 'f2b5',
 		'fas fa-hanukiah'                            => 'f6e6',
+		'fas fa-hard-hat'                            => 'f807',
 		'fas fa-hashtag'                             => 'f292',
 		'fas fa-hat-wizard'                          => 'f6e8',
 		'fas fa-haykal'                              => 'f666',
@@ -716,6 +726,7 @@ function geodir_font_awesome_array() {
 		'fas fa-hospital-alt'                        => 'f47d',
 		'fas fa-hospital-symbol'                     => 'f47e',
 		'fas fa-hot-tub'                             => 'f593',
+		'fas fa-hotdog'                              => 'f80f',
 		'fas fa-hotel'                               => 'f594',
 		'fab fa-hotjar'                              => 'f3b1',
 		'fas fa-hourglass'                           => 'f254',
@@ -729,6 +740,7 @@ function geodir_font_awesome_array() {
 		'fab fa-html5'                               => 'f13b',
 		'fab fa-hubspot'                             => 'f3b2',
 		'fas fa-i-cursor'                            => 'f246',
+		'fas fa-ice-cream'                           => 'f810',
 		'fas fa-icicles'                             => 'f7ad',
 		'fas fa-id-badge'                            => 'f2c1',
 		'far fa-id-badge'                            => 'f2c1',
@@ -789,6 +801,7 @@ function geodir_font_awesome_array() {
 		'fas fa-language'                            => 'f1ab',
 		'fas fa-laptop'                              => 'f109',
 		'fas fa-laptop-code'                         => 'f5fc',
+		'fas fa-laptop-medical'                      => 'f812',
 		'fab fa-laravel'                             => 'f3bd',
 		'fab fa-lastfm'                              => 'f202',
 		'fab fa-lastfm-square'                       => 'f203',
@@ -949,6 +962,7 @@ function geodir_font_awesome_array() {
 		'fas fa-outdent'                             => 'f03b',
 		'fab fa-page4'                               => 'f3d7',
 		'fab fa-pagelines'                           => 'f18c',
+		'fas fa-pager'                               => 'f815',
 		'fas fa-paint-brush'                         => 'f1fc',
 		'fas fa-paint-roller'                        => 'f5aa',
 		'fas fa-palette'                             => 'f53f',
@@ -979,6 +993,7 @@ function geodir_font_awesome_array() {
 		'fas fa-pencil-ruler'                        => 'f5ae',
 		'fab fa-penny-arcade'                        => 'f704',
 		'fas fa-people-carry'                        => 'f4ce',
+		'fas fa-pepper-hot'                          => 'f816',
 		'fas fa-percent'                             => 'f295',
 		'fas fa-percentage'                          => 'f541',
 		'fab fa-periscope'                           => 'f3da',
@@ -1000,6 +1015,7 @@ function geodir_font_awesome_array() {
 		'fab fa-pinterest'                           => 'f0d2',
 		'fab fa-pinterest-p'                         => 'f231',
 		'fab fa-pinterest-square'                    => 'f0d3',
+		'fas fa-pizza-slice'                         => 'f818',
 		'fas fa-place-of-worship'                    => 'f67f',
 		'fas fa-plane'                               => 'f072',
 		'fas fa-plane-arrival'                       => 'f5af',
@@ -1334,6 +1350,8 @@ function geodir_font_awesome_array() {
 		'fas fa-trash'                               => 'f1f8',
 		'fas fa-trash-alt'                           => 'f2ed',
 		'far fa-trash-alt'                           => 'f2ed',
+		'fas fa-trash-restore'                       => 'f829',
+		'fas fa-trash-restore-alt'                   => 'f82a',
 		'fas fa-tree'                                => 'f1bb',
 		'fab fa-trello'                              => 'f181',
 		'fab fa-tripadvisor'                         => 'f262',
@@ -1388,6 +1406,7 @@ function geodir_font_awesome_array() {
 		'fas fa-user-md'                             => 'f0f0',
 		'fas fa-user-minus'                          => 'f503',
 		'fas fa-user-ninja'                          => 'f504',
+		'fas fa-user-nurse'                          => 'f82f',
 		'fas fa-user-plus'                           => 'f234',
 		'fas fa-user-secret'                         => 'f21b',
 		'fas fa-user-shield'                         => 'f505',
@@ -1485,4 +1504,5 @@ function geodir_font_awesome_array() {
 		'fab fa-youtube-square'                      => 'f431',
 		'fab fa-zhihu'                               => 'f63f',
 	);
+
 }
