@@ -26,6 +26,7 @@ Using value VARCHAR in post request may break custom field save - FIXED
 Noindex on empty archive pages not working on page with one post - FIXED
 gd_listings shortcode parameter title_tag is not working - FIXED
 gd_listings shortcode new parameter view_all_link added - ADDED
+Font awesome settings icons updated to 5.7.2 - UPDATED
 
 v2.0.0.45
 Listing without author assigned always shows author actions widget - FIXED
